Fix spacing around check mark

--- a/css/password_strength.css
+++ b/css/password_strength.css
@@ -68,6 +68,7 @@
     }
     .check-mark {
       background: url("../images/check.png") no-repeat top left;
+      padding-left: 2em;
     }
     /* Message: Requirements */
     .password-strength-message-requirements .value {
